[gd_scene load_steps=3 format=3 uid="uid://dcujkowoece8d"]

[ext_resource type="Script" path="res://objects/sprite_element/SpriteElement.gd" id="1_ywa3u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_320ys"]
size = Vector2(11, 11)

[node name="SpriteElement" type="Sprite2D" groups=["Sprites"]]
script = ExtResource("1_ywa3u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_320ys")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2(-6, -6)
color = Color(1, 1, 0, 0.223529)
polygon = PackedVector2Array(0, 0, 12, 0, 12, 12, 0, 12)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
